--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "eslint-plugin-prettier-vue": "^5.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.15"
